--- a/_extensions/quarto-tacl/tacl-template.tex
+++ b/_extensions/quarto-tacl/tacl-template.tex
@@ -15,6 +15,7 @@ $doc-class.tex()$
 \usepackage{times,latexsym}
 \usepackage{url}
 \usepackage[T1]{fontenc}
+\usepackage{graphicx}
 
 $_tacl-preamble.tex()$
 
